# juntos_somos_mais_case

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
docs/: 01_configure_confluent_cli.md
kafka-consumer/: Dockerfile  kafka-consumer.py  pedidos-consumer.py
kafka-producer/: Dockerfile  kafka-producer.py
